tests/should_fail/sf013_double_dcolon.hs
-- Should fail: double :: in type signature
module Sf013DoubleDcolon where

f :: Int :: String
f x = x
